objects/LLC_BI__Application__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Compensation_Limitation_Amount__c</fullName>
        <description>Compensation Limitation Amount (total annual salaries, withdrawals or other forms of remuneration to officers or owners of Borrower and Operating Company, and their immediate family members) that Lender requires Borrower and Operating Company to certify that they will not, without Lender’s prior written consent be paid above.</description>
        <inlineHelpText>Compensation Limitation Amount (total annual salaries, withdrawals or any remuneration to officers or owners of Borrower and OC, and their immediate family members) Borrower and OC to certify that they will not, without Lenders written consent be paid.</inlineHelpText>
        <label>Compensation Limitation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Complete_Disbursement_No_Later_Than__c</fullName>
        <description>Maximum number of months from the approval date of Authorization for completing disbursements. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Maximum number of months from the approval date of Authorization for completing disbursements. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complete Disbursement No Later Than</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Complete_Disbursement_No_Later_Then__c</fullName>
        <description>---DEPRECATED------ Maximum number of months from the approval date of Authorization for completing disbursements. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Maximum number of months from the approval date of Authorization for completing disbursements. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>-D Complete Disbursement No Later Then</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Index_1__c</fullName>
        <description>This field is a picklist, used to specify the index the lending rate follows for the first rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is a picklist, used to specify the index the lending rate follows for the first rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Index 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WSJP</fullName>
                </value>
                <value>
                    <fullName>Libor</fullName>
                </value>
                <value>
                    <fullName>SBA Optional Peg Rate</fullName>
                </value>
                <value>
                    <fullName>Fixed Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Index_2__c</fullName>
        <description>This field is a picklist, used to specify the index the lending rate follows for the second rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is a picklist, used to specify the index the lending rate follows for the second rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Index 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WSJP</fullName>
                </value>
                <value>
                    <fullName>Libor</fullName>
                </value>
                <value>
                    <fullName>SBA Optional Peg Rate</fullName>
                </value>
                <value>
                    <fullName>Fixed Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Interest_Rate_1__c</fullName>
        <description>This field is a percentage, used to specify the term interest on the first rate for this Loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is a percentage, used to specify the term interest on the first rate for this Loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Interest Rate 1</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Interest_Rate_2__c</fullName>
        <description>This field is a percentage, used to specify the term interest on the second rate for this Loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is a percentage, used to specify the term interest on the second rate for this Loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Interest Rate 2</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Percentage_Applied_To_Loan_1__c</fullName>
        <description>This field is used to specify the percentage of interest rate applied to the loan in a split rate structure for the first rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is used to specify the percentage of interest rate applied to the loan in a split rate structure for the first rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Percentage Applied To Loan 1</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Percentage_Applied_To_Loan_2__c</fullName>
        <description>This field is used to specify the percentage of interest rate applied to the loan in a split rate structure for the second rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is used to specify the percentage of interest rate applied to the loan in a split rate structure for the second rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Percentage Applied To Loan 2</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Period_Length_1__c</fullName>
        <description>Number of units that determines total length of first rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Number of units that determines total length of first rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Period Length 1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Period_Length_2__c</fullName>
        <description>Number of units that determines total length of second rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Number of units that determines total length of second rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Period Length 2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Period_Unit_1__c</fullName>
        <description>Holds the units related to the number of Units for the first rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Holds the units related to the number of Units for the first rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Period Unit 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter</fullName>
                </value>
                <value>
                    <fullName>calendar quarter</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Period_Unit_2__c</fullName>
        <description>Holds the units related to the number of Units for the second rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Holds the units related to the number of Units for the second rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Period Unit 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter</fullName>
                </value>
                <value>
                    <fullName>calendar quarter</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Spread_1__c</fullName>
        <description>This field is used to specify the interest percentage added to Pricing Spread for the first rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is used to specify the interest percentage added to Pricing Spread for the first rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Spread (%) 1</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Complex_Spread_2__c</fullName>
        <description>This field is used to specify the interest percentage added to Pricing Spread for the second rate. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>This field is used to specify the interest percentage added to Pricing Spread for the second rate. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Complex Spread (%) 2</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__Consideration_For_Stock_Purchase_List__c</fullName>
        <description>Enter the list of corporation(s) that, prior to closing, Lender must obtain Consideration For Stock Purchase certificate from. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Enter the list of corporation(s) that, prior to closing, Lender must obtain Consideration For Stock Purchase certificate from. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Consideration For Stock Purchase List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Construction_For_New_Building__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For construction of (or the refinancing of the construction for) a new building.</description>
        <inlineHelpText>Construction Or The Refinancing Of The Construction For  New Building</inlineHelpText>
        <label>For Construction Of New Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Construction_Total__c</fullName>
        <description>Use of proceeds total amount used for construction</description>
        <label>Construction Total</label>
        <summarizedField>nSBA__Use_Of_Proceeds__c.nSBA__Proceed_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>nSBA__Use_Of_Proceeds__c.nSBA__Loan_Proceed_Type_Code__c</field>
            <operation>contains</operation>
            <value>04, 05, 06, 09</value>
        </summaryFilterItems>
        <summaryForeignKey>nSBA__Use_Of_Proceeds__c.nSBA__Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nSBA__Construction_WO_SBA_Grnt_Financed_By__c</fullName>
        <description>Name of lender who provided construction interim financing without SBA Guarantee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Name of lender who provided construction interim financing without SBA Guarantee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Construction WO SBA Grnt Financed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Contract_CAPLines_Applicant_Qualifies_7a__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contract CAPLines: Applicant qualifies under standard 7(a), is able to demonstrate an ability to operate profitably based upon the prior completion of similar contracts, possesses the overall ability to bid, accurately project costs, perform the specific type of work required by the contract(s), and has the financial capacity and technical expertise to complete the contract on time and at a profit.</description>
        <inlineHelpText>Contract CAPLines Applicant Qualifies Under Standard 7a</inlineHelpText>
        <label>Contract CAPLines Applicant Qualifies 7a</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Credit_Elsewhere_Test_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lender has assessed the borrower’s access to credit outside of this SBA-guaranteed loan and determined that such credit is not available elsewhere on reasonable terms from non-Federal sources.</description>
        <inlineHelpText>Lender has assessed the borrower’s access to credit outside of this SBA-guaranteed loan and determined that such credit is not available elsewhere on reasonable terms from non-Federal sources.</inlineHelpText>
        <label>Credit Elsewhere Test Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Debt_Meets_Requirements_SBA_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The debt is an existing SBA-guaranteed loan that is not same institution debt and the lender or borrower has obtained evidence that the lender currently holding the debt is unwilling or unable to modify the current payment terms or provide an increase or a second loan.</description>
        <inlineHelpText>The debt is an existing SBA loan that is not same institution debt and the lender or borrower has obtained evidence that the lender currently holding the debt is unwilling or unable to modify the current payment terms or provide an increase or a 2nd loan.</inlineHelpText>
        <label>Debt Meets Requirements SBA Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Debt_Meets_Requirements_Working_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The application is a Working Capital CAPLine, the debt is an existing SBA-guaranteed line of credit that is not with the requesting lender and all other requirements of debt refinancing in SOP 50 10 are met.</description>
        <inlineHelpText>The application is a Working Capital CAPLine, the debt is an existing SBA-guaranteed line of credit that is not with the requesting lender and all other requirements of debt refinancing in SOP 50 10 are met.</inlineHelpText>
        <label>Debt Meets Requirements Working Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Debt_Ref_All_Supporting_Docs_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please confirm that you have included a copy of all supporting documentation for each debt to be refinanced (e.g., note, security agreement, lease). For credit card debt a copy of the most recent credit card statement was provided, evidencing the name the debt is in and the current balance.</description>
        <inlineHelpText>Copy of all supporting documentation for each debt to be refinanced is included (note, security agreement, lease). For credit card debt copy of the most recent credit card statement was provided, evidencing the name the debt is in and the current balance.</inlineHelpText>
        <label>Debt Ref All Supporting Docs Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Debt_Ref_Biz_Debt_Schedule_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please confirm that you have included complete business debt schedule that matches the most current interim business financial statement.</description>
        <inlineHelpText>Please confirm that you have included complete business debt schedule that matches the most current interim business financial statement.</inlineHelpText>
        <label>Debt Ref Biz Debt Schedule Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Delegated_Lender_Cleared_Character__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Individual that answered “Yes” has completed an SBA Form 912 AND Delegated Lender has cleared the loan for processing based on SOP 50 10 5 guidelines. (Only delegated lenders have authority to clear a loan for processing under these guidelines.)</description>
        <inlineHelpText>Individual that answered “Yes” has completed an SBA Form 912 AND Delegated Lender has cleared the loan for processing based on SOP 50 10 5 guidelines. (Only delegated lenders have authority to clear a loan for processing under these guidelines.)</inlineHelpText>
        <label>Delegated Lender Cleared Character</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Determination_Explained_In_Credit_Memo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Applicant’s brand is not on the SBA Franchise Directory, Lender has determined that the brand does not meet the FTC definition of a franchise, but is eligible for SBA financial assistance. Lender has explained its determination in its credit memorandum. For delegated loans, Lender has retained all supporting documentation in its file. For non-delegated loans, lender has submitted the agreement and any other documentation required by the brand to the LGPC with its application.</description>
        <inlineHelpText>Lender has explained its determination in its credit memorandum. For delegated loans, Lender has retained all supporting documentation in its file. For non-delegated loans, lender has submitted the agreement and any other documentation to LGPC.</inlineHelpText>
        <label>Determination Explained In Credit Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Disability_Insurance_List_Of_Names__c</fullName>
        <description>List all names that must be covered by Disability Insurance in an amount and insurance company satisfactory to lender. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List all names that must be covered by Disability Insurance in an amount and insurance company satisfactory to lender. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Disability Insurance List Of Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Does_Meet_FTC_Franchise_Definition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>One or more applicant brands meet the FTC definition of a franchise.</description>
        <inlineHelpText>One or more applicant brands meet the FTC definition of a franchise.</inlineHelpText>
        <label>Does Meet FTC Franchise Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Does_Not_Meet_FTC_Franchise_Definition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>One or more applicant brands does not meet the FTC definition of a franchise.</description>
        <inlineHelpText>One or more applicant brands does not meet the FTC definition of a franchise.</inlineHelpText>
        <label>Does Not Meet FTC Franchise Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__EPC_And_OC_20_Percent_Guarantee_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Each 20% or more owner of the EPC and each 20% or more owner of the OC will guarantee the loan.</description>
        <inlineHelpText>EPC And OC 20 Percent OR More Owners Guarantee The Loan</inlineHelpText>
        <label>EPC And OC 20 Percent Guarantee Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__EPC_And_OC_Pass_SBA_Size_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The EPC (with the exception of a trust) and the OC each are small under SBA’s size standards.</description>
        <label>EPC And OC Pass SBA Size Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__EPC_Will_Lease_100_Of_Loan_Proceed_To_OC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The EPC will use the loan proceeds to acquire or lease, and /or improve or renovate real or personal property (including eligible refinancing) that it leases 100% to one or more OCs.</description>
        <inlineHelpText>EPC Will Lease 100 Of Loan Proceeds Property To OC</inlineHelpText>
        <label>EPC Will Lease 100 Of Loan Proceed To OC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__ETran_Lender_Alternative_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lender Official that will be assigned as Lender Alternative Contact during E-Tran Submission. If loan application has Lender Service Provider details and this field is not empty, contact details from this field will be sent in E-Tran Loan Application.</description>
        <inlineHelpText>Lender Official that will be assigned as Lender Alternative Contact during E-Tran Submission.</inlineHelpText>
        <label>E-Tran Alternative Lender Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ETranAlternativeContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__EWCP_If_Applicant_Is_EMC_Or_ETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Applicant is an export management company (EMC) or export trading company (ETC), the EMC or ETC will take title to the goods or services being exported and the EMC or ETC has no bank ownership.</description>
        <inlineHelpText>EWCP If Applicant Is EMC Or ETC SBA Requirements Are Met</inlineHelpText>
        <label>EWCP If Applicant Is EMC Or ETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__EWCP_Post_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates where this loan is structured with disbursement occurring after shipment.</description>
        <inlineHelpText>Indicates where this loan is structured with disbursement occurring after shipment.</inlineHelpText>
        <label>EWCP Post Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__EWCP_Single_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether loan is structured with a single or multiple loan disbursements.</description>
        <inlineHelpText>Indicates whether loan is structured with a single or multiple loan disbursements.</inlineHelpText>
        <label>EWCP Single Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Affiliates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant has possible affiliates</description>
        <label>Eligibility Affiliates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Exceeds_Size_Within_Limits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If size standard is exceeded by no more than 25%, Applicant agrees to use the assistance within a labor surplus area.</description>
        <inlineHelpText>Eligibility SBA Size Standard Exceeded Within Limits Agrees To Use Labor Surplus Area</inlineHelpText>
        <label>Eligibility Exceeds Size Within Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Franchise_Docs_Submit_Lpgc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>You have submitted the applicable franchise documents to the Standard 7(a) Loan Guaranty Processing Center (LGPC) for an affiliation determination.</description>
        <inlineHelpText>Eligibility Franchise Documentation Submitted To Lpgc</inlineHelpText>
        <label>Eligibility Franchise Docs Submit Lpgc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Franchise_Listed_In_Registry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Franchise Registry lists the agreement as an approved agreement.</description>
        <label>Eligibility Franchise Listed In Registry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Franchisor_Not_Affiliated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>You have submitted the necessary franchise documents to SBA for review in accordance with SOP 50 10 5 and received notification from SBA that the applicant business and the franchisor are not affiliated.</description>
        <label>Eligibility Franchisor Not Affiliated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Franchisor_Profit_Risk_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For applications submitted under Lender’s delegated authority: You have made the determination that the applicant business has the right to profit and risk of loss commensurate with ownership and there are no excessive restraints on the sale of the franchise/license/dealer/jobber or similar interest.</description>
        <inlineHelpText>Franchisor Has Right To Profit And Risk</inlineHelpText>
        <label>Franchisor Has Right To Profit And Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Lenders_Delegated_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This loan application is submitted under Lender&apos;s delegated authority</description>
        <inlineHelpText>Submitted Under Lenders Delegated Authority Indicator</inlineHelpText>
        <label>Eligibility Lenders Delegated Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Meets_Alternative_SBA_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The combined size calculation of applicant and its affiliates meets the alternative size standard.</description>
        <inlineHelpText>Eligibility Meets Alternative SBA Size Standard</inlineHelpText>
        <label>Eligibility Meets Alternative SBA Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Meets_SBA_Size_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The combined size calculation of applicant and its affiliates meets the size standard for the applicant’s primary industry or the size standard for the primary industry of the applicant and its affiliates, whichever is higher.</description>
        <label>Eligibility Meets SBA Size Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Operate_US_Bus_For_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant is an operating business organized for profit, is located in United States, has demonstrated a need for the desired credit, and the desired credit is not otherwise available on reasonable terms from non-Federal sources</description>
        <inlineHelpText>Eligibility Operating US Bus For Profit No Credit Elsewhere</inlineHelpText>
        <label>Eligibility Operate US Bus For Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Eligibility_Products_Available_To_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The products and/or services of the Applicant business are available to the general public.</description>
        <label>Eligibility Products Available To Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Env_Investigation_Results_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check for regular non-PLP loans when Lender did not submit the results of the Environmental Investigation. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check for regular non-PLP loans when Lender did not submit the results of the Environmental Investigation. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Env Investigation Results Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Environmental_Requirements_Open_Options__c</fullName>
        <description>List Environmental Requirements Open Options here. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List Environmental Requirements Open Options here. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Environmental Requirements Open Options</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Environmental_Requirements_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Environmental Requirements Required (for all commercial real property). This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Environmental Requirements Required (for all commercial real property). This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Environmental Requirements Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Evidence_Of_Bulk_Sales_Or_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Evidence that seller has complied with Bulk Sales or Transfer provisions of state law, if applicable, or has arranged to protect Borrower’s purchased assets from claims of seller’s creditors. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Evidence that seller has complied with Bulk Sales or Transfer provisions of state law, if applicable, or has arranged to protect Borrower’s purchased assets from claims of seller’s creditors. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Evidence Of Bulk Sales Or Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Existing_Debt_Not_Meet_Applicant_Needs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Existing debt no longer meets the needs of the Applicant.</description>
        <inlineHelpText>Existing Debt No Longer Meets Applicant needs</inlineHelpText>
        <label>Existing Debt Doesnt Meet Needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Expansion_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form 1920 - Page 2 - Use of Proceeds - Expansion Construction Indicator (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Expansion Construction Indicator (in thousands)</inlineHelpText>
        <label>Expansion Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_12m_Old_Bus_Or_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The business has been operating, although not necessarily in exporting, for at least 12 full months. If less than 12 months, the applicant’s key personnel have clearly demonstrated export expertise and substantial previous successful business experience, AND the lender processes the Export Express loan using conventional commercial loan underwriting procedures and does not rely solely on credit scoring or credit matrices to approve the loan. For non-bank lenders that do not have a conventional loan portfolio, a written approval from the Office of Credit Risk Management for their underwriting procedures has been has been obtained prior to making the Export Express loan.</description>
        <inlineHelpText>Export Express At Least 12 months Old Business or Experienced Employees</inlineHelpText>
        <label>Export Exp 12m Old Bus Or Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_For_Export_Dev_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Loan proceeds will be used for an export development activity.</description>
        <inlineHelpText>Export Express For Export Development Activities</inlineHelpText>
        <label>Export Exp For Export Dev Activities</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>